--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -1,4 +1,4 @@
-.Search{
+/* .Search{
     border-radius: 10px;
     height: 30px;
     width: 300px;
@@ -13,4 +13,4 @@
     min-width: auto;
     justify-content: center;
     font-size: 22px;
-}
+} */
