--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -1,4 +1,4 @@
-.NavBar{
+/* .NavBar{
     background-color: rgba(128, 34, 34, 0.514);
     margin-top: 0px;
     margin-bottom: 40px;
@@ -19,4 +19,4 @@
     min-width: auto;
     justify-content: center;
     font-size: 16px;
-}
+} */
