--- a/src/components/LandingPage/LandingPage.module.css
+++ b/src/components/LandingPage/LandingPage.module.css
@@ -1,6 +1,7 @@
 .LandingPage {
     background-image: url(../../imagenes/home.jpg);     
     background-size:cover;
+    background-repeat:no-repeat;
     min-height: 100.1vh;
     display: flex;
     justify-content:flex-start;
@@ -13,24 +14,25 @@
     position: relative;
     display: inline-block;
     padding: 1px 20px;
-    color:#3bd419;
+    color:#1f1f08;
     letter-spacing: 4px;
-    font-size: 15px;
+    font-size: 10px;
     text-decoration: none;
     overflow: hidden;
     transition: 0.3s;
-    background-color: #a945c794;
+    background-color: #c4c4befd;
     border: none;
-    border-radius: 80px 5px 80px 10px;
-    box-shadow: 0 0 20px #3bd419, 0 0 20px #3bd419, 0 0 20px #3bd419;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 0 10px #dee2dd, 0 0 10px #cbee04, 0 0 20px #3bd419;
+    font-family: monospace;
 }
 
 .Ingresar:hover{
-    background-color: #24920b;
-    box-shadow: 0 0 10px #a945c7, 0 0 40px #a945c7, 0 0 80px #a945c7;
-    color: #cca6d8;
-    font-size: 22px;
-    margin-left: 50px;
-    margin-bottom: 70px;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px #dee2dd, 0 0 10px #cbee04, 0 0 20px #3df804;
+    color: #5c5c5a;
+    font-size: 12px;
+    margin-left: 79px;
+    margin-bottom: 86px;
     
 }
