Add creator form

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -54,3 +54,11 @@ nav{
     */
  }
 
+ .invisible{
+  position: absolute;
+  background-color: rgba(255, 0, 0, 0);
+  height: 108px;
+  width: 160px;
+  margin-top: -157px;
+  margin-left: 1159px;
+ }
