--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -8,7 +8,7 @@
 
 .form{
     margin-top: -40px;
-    margin-left: 250px;
+    margin-left: 370px;
 }
 
 .input{
@@ -42,8 +42,8 @@
 }
 
 .boton{
-    margin-top: 27px;
-    margin-left: 595px;
+    margin-top: 34px;
+    margin-left: 613px;
     padding: 1px 20px;
     color:#050505;
     letter-spacing: 4px;
@@ -51,17 +51,17 @@
     text-decoration: none;
     overflow: hidden;
     transition: 0.1s;
-    background-color: rgba(250, 250, 245, 0.938);
+    background-color: rgba(240, 141, 243, 0.938);
     border: none;
     border-radius: 5px;
-    /* box-shadow: 0 0 10px #dee2dd, 0 0 10px #cbee04, 0 0 20px #3bd419; */
+    box-shadow: 0 0 10px #080808, 0 0 10px #080808, 0 0 20px #0c0c0c;
     font-family: monospace;
 }
 
 .boton:hover{
-    background-color:  rgba(97, 97, 94, 0.938);
-    box-shadow: 0 0 10px #35fc03, 0 0 10px #33ee04, 0 0 20px #3df804;
-    margin-left: 593px;
+    background-color:  #e35df5(163, 72, 163, 0.938);
+    box-shadow: 0 0 10px #dc03f8, 0 0 10px #dc03f8, 0 0 20px #dc03f8;
+    margin-left: 613px;
 }
 
 .input1{
